fix dark mode and styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,19 @@
 
 
 pre:has(.hljs) {
-  @apply my-6 rounded-lg bg-slate-50 p-4 overflow-x-auto text-sm;
-  @import '../styles/github.css';
+  @apply my-6 rounded-lg bg-slate-50 dark:bg-slate-800 p-4 overflow-x-auto text-sm;
 }
 
-/* Optional: extra contrast for the inner <code> */
 pre:has(.hljs) code {
   @apply block min-w-max leading-relaxed;
 }
 
-html.dark pre:has(.hljs) {
-  @apply my-6 rounded-lg bg-slate-800 p-4 overflow-x-auto text-sm;
+@import '../styles/github.css';
+
+@media (prefers-color-scheme: dark)  {
   @import '../styles/github-dark.css';
 }
+
 
 figure {
   @apply my-6 mx-auto flex flex-col items-center justify-center;
